--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -73,3 +73,65 @@ input[class^='btn-']:focus {
   box-shadow: none;
   outline: none;
 }
+
+.menu-icon {
+  position: absolute;
+  top: 1.5rem;
+  //right: -70px;
+  width: 2rem;
+  height: 2rem;
+  cursor: pointer;
+  z-index: 1;
+  background: transparent;
+  //font-size: 2rem;
+  //cursor: pointer;
+
+  span {
+    display: block;
+    width: 2rem;
+    height: 3px;
+    background: #262626;
+    position: absolute;
+    top: 15px;
+    transition: 0.5s;
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: -7px;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background: #262626;
+      transition: 0.5s;
+    }
+    &:after {
+      content: '';
+      position: absolute;
+      top: 7px;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background: #262626;
+      transition: 0.5s;
+    }
+  }
+}
+.toggle {
+  left: 80%;
+  transition: left 0.5s linear 1s;
+  background: rgb(243, 237, 237);
+  span {
+    background: transparent;
+    &:before {
+      top: 0;
+      transform: rotate(45deg);
+      //background: #ffffff;
+    }
+    &:after {
+      top: 0;
+      transform: rotate(-45deg);
+      //background: #ffffff;
+    }
+  }
+}
